force-app/main/default/objects/emp__c/emp__c.object-meta.xml
<CustomObject>
    <label>emp</label>
    <nameField>
        <label>emp Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>emp</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>