force-app/main/default/objects/emp__c/fields/contact_no__c.field-meta.xml
<CustomField>
    <fullName>contact_no__c</fullName>
    <label>contact no</label>
    <type>Phone</type>
</CustomField>