force-app/main/default/objects/emp__c/fields/eid__c.field-meta.xml
<CustomField>
    <fullName>eid__c</fullName>
    <label>eid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>