force-app/main/default/objects/emp__c/fields/no_of_hours__c.field-meta.xml
<CustomField>
    <fullName>no_of_hours__c</fullName>
    <label>no of hours</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>40</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>