force-app/main/default/objects/emp__c/fields/salary__c.field-meta.xml
<CustomField>
    <fullName>salary__c</fullName>
    <label>salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>