force-app/main/default/objects/emp__c/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <label>type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>full time</fullName>
            </value>
            <value>
                <fullName>part time</fullName>
            </value>
            <value>
                <fullName>contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>